--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -120,101 +120,80 @@
 		  	</ul>
 	  	</div>
 	</div>
+	<!-- End of 1st scroll-->
 
-<!--
-	<div class="ubea-section-overflow">
-
-		<div class="ubea-section" id="ubea-services" data-section="services">
-			<div class="ubea-container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="ubea-heading">
-							<h2 class="ubea-left">Services</h2>
-
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+	<div id="page-wrapper" >
+		<div class="container-fluid" >
+				<div class="row" >
+						<div class="col-lg-12">
+								<h1 class="page-header text-center">Ranking</h1>
 						</div>
-					</div>
+						<!-- /.col-lg-12 -->
 				</div>
+				<!-- /.row -->
 				<div class="row">
-					<div class="col-md-6">
-						<div class="row">
+					<div class="text-center" style="padding-left:500px">
+						<div class="col-lg-6">
+								<div class="panel panel-default">
+										<div class="panel-heading">
+												Ranking
+										</div>
+										<!-- /.panel-heading -->
+										<div class="text-center" style="">
+										<div class="panel-body" >
+												<div class="table-responsive">
+														<table class="table table-striped table-bordered table-hover"  id="">
+																<thead>
+																		<tr>
+																				<th>Department Name</th>
+																				<th>Score</th>
 
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-umbrella"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Wealth Management</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-monitor"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Investment Banking</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-cup"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Sales and Trading</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-pencil"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Strategic Planning</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-cog"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Turnaround Consulting</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-layers"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Bonds & Commodities</h3>
-										<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Nulla cursus pharetra massa at lacinia Fusce eleifhend Fusce in dapibus.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
--->
+																		</tr>
+																</thead>
+																<tbody>
+																	{% for dept,score in l %}
+																		<tr class="odd gradeX">
+																				<td>{{dept}}</td>
+																				<td>{{score}}</td>
+
+																		</tr>
+
+																	{% endfor %}
+																 </tbody>
+														</table>
+												</div>
+												</div>
+												</div>
+												</div>
+												</div>
+												</div>
+												</div>
+	
+<!-- ranking ends-->
+<br>
+<br>
+<div id="page-wrapper">
+	<div class="container-fluid ">
+	
+		<script type="text/javascript" src="{% static 'dept/fusioncharts/js/fusioncharts.js' %}"></script>
+		<script type="text/javascript" src="{% static 'dept/fusioncharts/js/themes/fusioncharts.theme.fusion.js' %}"></script>
+	
+	<div class="text-center">
+	<!--body style="font-family:'Helvetica Neue', Arial; font-size: 16px;"-->
+		<h3>{{ chartTitle|safe }}</h3>
+		<div id="chart-1">{{ output|safe }}</div>
+	</div>
+	</div>
+	</div>
+	<br>
+	<br>
+
+<!--shit begings/-->
+<div style="text-align: center">
+	<a href="{% url 'view_stats' %}"><h3 style="color: blue">View Statistics</h3></a>
+</div>
+	
+
 		<div class="ubea-section" id="ubea-portfolio" data-section="portfolio">
 			<div class="ubea-container">
 				<div class="row">
@@ -367,106 +346,6 @@
 				</div>
 			</div>
 		</div>
-<!--
-		<div class="ubea-section" id="ubea-faq" data-section="faq">
-			<div class="ubea-container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center ubea-heading">
-						<h2>Frequently Ask Questions</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>What is uBeasa?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur.</p>
-								</div>
-							</div>
-						</div>
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>I have technical problem, who do I email?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur. </p>
-								</div>
-							</div>
-						</div>
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>How do I use uBeasa features?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur.</p>
-								</div>
-							</div>
-						</div>
-
-					</div>   
-					<div class="col-md-6">
-
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>What language are available?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur. </p>
-								</div>
-							</div>
-						</div>
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>Can I have a username that is already taken?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur. </p>
-								</div>
-							</div>
-						</div>
-						<div class="ubea-accordion">
-							<div class="ubea-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>Is uBeasa free?</h3>
-							</div>
-							<div class="ubea-accordion-content">
-								<div class="inner">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur. </p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-
-	</div>  
-
-    <div id="ubea-blog" data-section="about">
-		<div class="ubea-container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center ubea-heading">
-					<h2>About us</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non sed sequi rerumar quasi repellat eum earum praesentium totam! Quia, voluptas eaque anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore pariatur. </p>
-				</div>
-			</div>
-	    </div>
-    </div>  -->
 
 	<div id="ubea-contact" data-section="contact" class="ubea-cover ubea-cover-xs" style="background-image:url('{% static 'home/img/img_bg_2.png' %}');">
 		<div class="overlay"></div>
