removed stakeholder name & download ap

--- a/dept/templates/dept/home.html
+++ b/dept/templates/dept/home.html
@@ -3,33 +3,32 @@
 
 
 {% block content %}
+<!--
 <div id="page-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">STAKEHOLDER NAME</h1>
-            </div>
-            <br>
-            <br>
-            <!-- /.col-lg-12 -->
-        </div>
 
         <div class="row">
               <!--collapse for action points-->
 
-        <div class="col-lg-8">
-          <h3>Action Points</h3>
-          <br>
-          <ul>
+          <div class="container">
+            <div class="row d-flex ">
+
+                <div class="col-lg-8">
+
+                        <div class="d-flex justify-content-center">
+                                <h1 class="page-header">Action Points</h1>
+                            </div>
+            <br>
+
           {% for m,val,j,k in main %}
-          <li>
-              <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="{{j}}">
-                  {{val.action_name}}</a>
-                </h4>
+          
+          <div id="accordion" class="rah">
+            <div class="card">
+              <div class="card-header">
+            <h5>
+                    {{val.action_no}}.
+                    <a data-toggle="collapse" data-parent="#accordion" href="{{j}}">
+                   {{val.action_name}}</a>
+                </h5>
               </div>
               <div id="{{k}}" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -84,9 +83,9 @@
             </div>
 
 
-      </li>
+     
     {% endfor %}
-    </ul>
+    
         </div>
 
           <!--notifications-->
