--- a/stk_hld/templates/stk_hld/feedback_form.html
+++ b/stk_hld/templates/stk_hld/feedback_form.html
@@ -28,7 +28,11 @@
                                       <label for="input-1" class="control-label">Rate Department {{dept.dept_name}} </label>
 
 
-                                      <input id="input-1" name="dept{{j}}" class="rating rating-loading" data-min="0" data-max="5" data-step="1" required>
+                                      <input id="input-1" name="dept{{j}}" class="rating rating-loading" data-min="0" data-max="5" data-step="1" value="2" required>
+                                      <!-- <br/>
+    <label for="input-1" class="control-label">Give a rating for Skill:</label>
+    <input id="input-1" name="input-1" class="rating rating-loading" data-min="0" data-max="5" data-step="0.1" value="2">
+    <br/> -->
 
 
 
@@ -40,6 +44,11 @@
                                     </div>
 
                                     </div>
+                                  </div>
+                                  </div>
+                                  </div>
+                                  </div>
+                                  </div>
 
 
 
