--- a/dipp/templates/dipp/dept_summary.html
+++ b/dipp/templates/dipp/dept_summary.html
@@ -5,7 +5,7 @@
 {% block content %}
             <div id="page-wrapper">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row d-flex justify-content-center">
                         <div class="col-lg-12">
                             <h1 class="page-header">Department Summary</h1>
                         </div>
@@ -16,26 +16,26 @@
                       <div class="col-lg-8">
                       {% for val,j,k in d %}
                           <!--collapse for action points-->
-                          <div class="panel-group" id="accordion">
-                        <div class="panel panel-default">
+                          <div class="card-group" id="accordion">
+                        <div class="card card-default">
 
-                          <div class="panel-heading">
-                            <h4 class="panel-title">
+                          <div class="card-heading">
+                            <h4 class="card-title text-center">
                               <a data-toggle="collapse" data-parent="#accordion" href="{{j}}">
                               {{val.dept_name}}</a>
                             </h4>
                           </div>
 
-                          <div id="{{k}}" class="panel-collapse collapse">
-                            <div class="panel-body">
+                          <div id="{{k}}" class="card-collapse collapse">
+                            <div class="card-body">
                               <div class="row">
                                   <div class="col-lg-12">
-                                      <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                               Targets assigned and achieved by the department
+                                      <div class="card card-default text-center">
+                                          <div class="card-heading bg-primary text-white">
+                                              <h4> Targets assigned and achieved by the department</h4>
                                           </div>
-                                          <!-- /.panel-heading -->
-                                          <div class="panel-body">
+                                          <!-- /.card-heading -->
+                                          <div>
                                               <div class="table-responsive">
                                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                                       <thead>
@@ -65,15 +65,15 @@
 
 
                                                   <!--  For achievements -->
-                           <div class="panel-body">
+                           <div class="card-body">
                               <div class="row">
                                   <div class="col-lg-12">
-                                      <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                              Achievements
+                                      <div class="card card-default text-center">
+                                          <div class="card-heading bg-primary text-white">
+                                              <h4>Achievements</h4>
                                           </div>
-                                          <!-- /.panel-heading -->
-                                          <div class="panel-body">
+                                          <!-- /.card-heading -->
+                                          <div>
                                               <div class="table-responsive">
                                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                                       <thead>
@@ -103,15 +103,15 @@
                                   </div>
                               </div>
 
-                           <div class="panel-body">
+                           <div class="card-body">
                               <div class="row">
                                   <div class="col-lg-12">
-                                      <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                              Delay
+                                      <div class="card card-default text-center">
+                                          <div class="card-heading bg-primary text-white">
+                                              <h4>Delay</h4>
                                           </div>
-                                          <!-- /.panel-heading -->
-                                          <div class="panel-body">
+                                          <!-- /.card-heading -->
+                                          <div >
                                               <div class="table-responsive">
                                                   <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                                                       <thead>
